--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -34,6 +34,7 @@
     - java
     - intellij-idea
     - xquartz
+    - mysqlworkbench
 
 - name: Install homebrew packages
   homebrew: name={{ item }}
