Update first shell script

--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -47,6 +47,8 @@
     - sbt
     - typesafe-activator
     - sanemat/font/ricty
+    - memcached
+    - redis
 
 - name: Clone dotfiles repository
   git:
