Add virtualbox and vagrant

--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -40,6 +40,8 @@
     - pycharm
     - xquartz
     - mysqlworkbench
+    - virtualbox
+    - vagrant
 
 - name: Install homebrew packages
   homebrew: name={{ item }}
