--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -57,6 +57,10 @@
     - postgresql
     - lha
 
+- name: Install pip packages
+  pip:
+    name: fabric
+
 - name: Clone dotfiles repository
   git:
     repo: https://github.com/yukihirai0505/dotfiles.git
