Add tmuxinator setting

--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -65,6 +65,11 @@
   pip:
     name: fabric
 
+- name: Install latest available version of tmuxinator.
+  gem:
+    name: tmuxinator
+    state: latest
+
 - name: Clone dotfiles repository
   git:
     repo: https://github.com/yukihirai0505/dotfiles.git
