Fix source .zshrc task

--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -96,7 +96,7 @@
   when: check_shell.stdout == "0"
 
 - name: Source .zshrc
-  shell: 'source ~/.zshrc'
+  shell: 'source $HOME/.zshrc executable=/usr/local/bin/zsh'
 
 - name: Check ricty file
   stat:
