--- a/ansible/roles/macOS/defaults/main.yml
+++ b/ansible/roles/macOS/defaults/main.yml
@@ -62,6 +62,7 @@ homebrew_after_pkgs:
   - apache-spark
   - tree
   - python2
+  - openssl
 
 gem_pkgs:
   - serverspec
@@ -72,3 +73,4 @@ npm_pkgs:
   - yaml2json
   - aglio
   - serverless
+  - node-inspector
