--- a/ansible/roles/macOS/tasks/homebrew.yml
+++ b/ansible/roles/macOS/tasks/homebrew.yml
@@ -5,7 +5,7 @@
 
 - name: Install homebrew packages
   homebrew: name={{ item }}
-  with_items: "{{ homebrew_before_pkgs }}"
+  with_items: "{{ homebrew_pkgs }}"
 
 - name: Add homebrew tap repositories
   homebrew_tap: tap={{ item }} state=present
@@ -18,7 +18,3 @@
 - name: Install Homebrew cask packages
   homebrew_cask: name={{ item }}
   with_items: "{{ homebrew_cask_pkgs }}"
-
-- name: Install homebrew packages
-  homebrew: name={{ item }}
-  with_items: "{{ homebrew_after_pkgs }}"
