Update java to java8

--- a/ansible/roles/macOS/defaults/main.yml
+++ b/ansible/roles/macOS/defaults/main.yml
@@ -22,7 +22,7 @@ homebrew_pkgs:
 
 homebrew_cask_pkgs:
   - iterm2
-  - java
+  - caskroom/versions/java8
   - mysqlworkbench
   - docker
   - appcleaner
